[package]
name = "ckb-fuzz"
version = "0.117.0-pre"
publish = false
edition = "2021"
license = "MIT"
description = "ckb network fuzz testing"
homepage = "https://github.com/nervosnetwork/ckb"
repository = "https://github.com/nervosnetwork/ckb"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
ipnetwork = "0.18"
futures = "0.3"
tokio = { version = "1", features = ["sync", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dependencies.ckb-network]
path = "../network"
features = ["fuzz"]

[dependencies.ckb-chain]
path = "../chain"

[dependencies.ckb-sync]
path = "../sync"

[dependencies.ckb-shared]
path = "../shared"

[dependencies.ckb-launcher]
path = "../util/launcher/"
features = ["fuzz"]

[dependencies.ckb-channel]
path = "../util/channel"

[dependencies.ckb-app-config]
path = "../util/app-config"

[dependencies.ckb-build-info]
path = "../util/build-info"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_compress"
path = "fuzz_targets/fuzz_compress.rs"
test = false
doc = false

[[bin]]
name = "fuzz_decompress"
path = "fuzz_targets/fuzz_decompress.rs"
test = false
doc = false

[[bin]]
name = "fuzz_addr_manager"
path = "fuzz_targets/fuzz_addr_manager.rs"
test = false
doc = false

[[bin]]
name = "fuzz_peer_store"
path = "fuzz_targets/fuzz_peer_store.rs"
test = false
doc = false

[[bin]]
name = "fuzz_p2p"
path = "fuzz_targets/fuzz_p2p.rs"
test = false
doc = false
